--- a/src/app/shared/components/carousel/carousel.component.html
+++ b/src/app/shared/components/carousel/carousel.component.html
@@ -5,7 +5,7 @@
         <link rel="preload" href="assets/office1.webp" as="image" type="image/webp">
         <link rel="preload" href="assets/office2.webp" as="image" type="image/webp">
         <link rel="preload" href="assets/office3.webp" as="image" type="image/webp">
-        <img [src]="item.image" alt="Slide" class="object-cover md:object-fill" async>
+        <img [src]="item.image" alt="Slide" class="object-cover md:object-fill" async loading="eager">
       </div>
     </div>
   </div>
