--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -8,53 +8,64 @@
     height: 124px;
     color: #FFFFFF;
     display: block;
-    p, h2 {
+
+    p,
+    h2 {
       justify-content: center;
       display: flex;
       padding-left: 32px;
       padding-right: 32px;
       margin: 0;
     }
-    p{
+
+    p {
       padding-top: 10px;
       font-size: 14px;
     }
-    h2{
+
+    h2 {
       padding-top: 15px;
       font-size: 20px;
     }
   }
+
   position: relative;
   overflow: hidden;
   width: 100%;
   z-index: 10;
+
   .carousel-viewport {
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
     height: 100%;
   }
+
   .carousel-inner {
     display: inline-flex;
     transition: transform 0.5s ease;
     height: 100%;
     width: 100%;
   }
+
   .carousel-item {
     flex: 0 0 100%;
     height: 100%;
+
     img {
       width: 100%;
       height: 100%;
     }
   }
+
   .carousel-indicators {
     display: flex;
     justify-content: center;
     position: absolute;
     bottom: 10px;
     width: 100%;
-    .carousel-bg{
+
+    .carousel-bg {
       display: flex;
       justify-content: center;
       background-color: #00000059;
@@ -65,6 +76,7 @@
       padding-bottom: 12px;
       height: auto;
       z-index: 10;
+
       .carousel-indicator {
         opacity: 1;
         display: flex;
@@ -74,6 +86,7 @@
         background: #9CA48D;
         margin: 0 5px;
       }
+
       .carousel-indicator.active {
         background: var(--primary-background-color);
       }
