fix fonts and mail

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -110,7 +110,7 @@
           <div class="flex flex-col flex-wrap gap-6 md:border-r-2 border-[#9ca48d60] pr-2">
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Email :</h4>
-              <p class="mt-1 md:pl-3">{{infos.email}}</p>
+              <p class="mt-1 md:pl-3 underline"><a href="mailto:contact@alisee-eggermont-psy.fr">{{infos.email}}</a></p>
             </div>
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Téléphone :</h4>
