--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ html {
 }
 
 .headerName {
-  font-family: cursive;
+  font-family: "Cedarville Cursive", cursive;
   font-weight: 400;
   font-style: normal;
 }
