cleanup and fonts changes

--- a/src/app/pages/mentions/mentions.component.html
+++ b/src/app/pages/mentions/mentions.component.html
@@ -53,8 +53,8 @@
     <p class="an-1 mt-6 text-lg leading-7 text-gray-600 text-justify">
         Si le visiteur estime que Alisée Eggermont n’a pas correctement répondu à ses sollicitations, il dispose d’un droit
         d’introduire une réclamation auprès de la CNIL. Alisée Eggermont limite la collecte des données personnelles au
-        strict nécessaire au regard des finalités des traitements de données, elles sont destinées à l’entreprise Green Energy
-        Solutions mais sont susceptibles d’être transférées à des organismes publics afin de mieux répondre à la demande du visiteur.
+        strict nécessaire au regard des finalités des traitements de données, elles sont destinées à l’entreprise Alisée Eggermont
+        mais sont susceptibles d’être transférées à des organismes publics afin de mieux répondre à la demande du visiteur.
     </p>
     <p class="an-1 mt-6 text-lg leading-7 text-gray-600 text-justify">
         Les données ne sont en aucun cas communiquées, ni vendues, ni cédées, louées et / ou commercialisées à des tiers au sens
