--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ html {
 }
 
 .headerName {
-  font-family: "Cedarville Cursive", cursive;
+  font-family: "Cormorant Infant";
   font-weight: 400;
   font-style: normal;
 }
@@ -67,7 +67,6 @@ html {
 }
 
 #iew_aw_app .widget-footer {
-  // margin-top: 20px;
   text-align: center;
 }
 
