widget works with iframe. Better perf. Need more style

--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -1,3 +1,14 @@
+:host{
+  display: block;
+  width: 100%;
+}
+
+iframe {
+  width: 100%!important;
+  height: 600px;
+  border: none;
+}
+
 
 .iew-base {
   width: 100% !important;
