--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -150,4 +150,25 @@
     </div>
   </div>
 
+  <div class="flex flex-col w-full h-full lg:h-screen justify-center bg-[#9CA48D] items-center" id="contact">
+      <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-20">
+        Prendre rendez-vous
+      </h2>
+        <app-widget></app-widget>
+      <div class="h-16 bg-[#ded9d5] max-h-16 w-full flex" id="footer">
+        <!-- TODO -->
+        <!-- <img src="assets/logo_ffdp.png" alt="" class="h-full">
+        <div id="box" class="flex justify-center h-8"><a rel="nofollow" href="https://www.psychologue.net/cabinets/alisee-eggermont?utm_source=434216&utm_medium=widget&utm_campaign=widget-company_stamp" target="_blank" ><img src="https://www.psychologue.net/stamp.xpng?com=434216&v=10" alt="Alisée EGGERMONT" class="border-0 h-full" /></a></div> -->
+        <div
+          class="sm:flex-row flex flex-col sm:flex sm:gap-8 gap-2 items-center h-full text-sm justify-between w-full px-8"
+        >
+          <span>© 2024 - Alisée Eggermont</span>
+          <div class="sm:flex-row flex flex-col sm:gap-8 gap-2">
+            <div routerLink="mentions" class="cursor-pointer"> Mentions légales </div>
+            <a href="https://www.codingcorp.fr/"> Powered by Coding Corp</a>
+          </div>
+        </div>
+      </div>
+  </div>
+
 </section>
