--- a/src/app/shared/components/carousel/carousel.component.scss
+++ b/src/app/shared/components/carousel/carousel.component.scss
@@ -9,6 +9,13 @@
     color: #FFFFFF;
     display: block;
 
+    @media (max-width: 768px) {
+      width: 100%;
+      top: 0;
+      right: 0;
+      height: auto;
+    }
+
     p,
     h2 {
       justify-content: center;
@@ -55,6 +62,9 @@
     img {
       width: 100%;
       height: 100%;
+      @media (max-width: 768px) {
+        height: 600px;
+      }
     }
   }
 
@@ -64,6 +74,10 @@
     position: absolute;
     bottom: 10px;
     width: 100%;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
 
     .carousel-bg {
       display: flex;
