--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,10 +4,10 @@
        id="home">
     <div class="md:pt-0 md:pb-0 pb-28 flex flex-col justify-center items-center w-full h-full">
       <div class="absolute h-full md:bottom-0 z-10 opacity-90 flex flex-col items-center justify-center gap-4 pt-28 md:pt-0">
-        <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName">{{name}}</h2>
-        <h3 class="an-1 text-xl font-medium">{{introduction}}</h3>
+        <h2 class="an-1 text-4xl md:text-7xl tracking-tight headerName">{{name}}</h2>
+        <h3 class="an-1 intro">{{introduction}}</h3>
       </div>
-      <div class="h-full flex flex-col z-1 opacity-60">
+      <div class="h-full flex flex-col z-1 opacity-50">
         <div class="mx-auto text-center h-full">
           <app-carousel [items]="carouselItems"></app-carousel>
          </div>
@@ -56,14 +56,14 @@
   </div>
 
   <!-- Therapyst -->
-  <div class="lg:py-16 px-6 lg:px-8 bg-[#9ca48d96] h-full pt-20 md:pt-0 lg:flex lg:flex-col justify-center"
+  <div class="lg:py-16 px-6 lg:px-8 bg-[#9ca48d96] lg:screen h-full pt-20 md:pt-0 lg:flex lg:flex-col justify-center"
        id="psy">
     <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full">
     <div class="flex flex-col w-full h-full">
       <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl pt-5">{{therapyst}}</h2>
-      <div class="h-full text-base leading-8 text-justify bloc lg:flex gap-5 justify-center w-full mt-2">
-        <div class="items-start lg:grid-cols-2 flex h-full lg:flex-row flex-col w-full lg:w-2/3 rounded-xl">
-          <div class="lg:w-[47%] flex flex-col h-full flex-1">
+      <div class="h-full m-auto text-base leading-8 text-justify bloc lg:flex gap-4 justify-center w-full mt-2">
+        <div class="lg:ml-4 mt-5 items-start lg:grid-cols-2 flex h-full lg:flex-row flex-col w-full lg:w-2/3 rounded-xl gap-4">
+          <div class="lg:w-1/2 flex flex-col h-full flex-1">
             <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro1}}</p>
             <div>
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">
@@ -76,7 +76,7 @@
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text2}}</p>
             </div>
           </div>
-          <div class="lg:w-[53%] flex flex-col h-full flex-1">
+          <div class="lg:w-1/2 flex flex-col h-full flex-1">
             <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro2}}</p>
             <div>
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text3}}</p>
@@ -84,10 +84,10 @@
             </div>
           </div>
         </div>
-        <div class="w-[90%] lg:w-1/3 h-full flex items-center m-auto pb-10 lg:pb-0">
+        <div class="w-[90%] lg:w-1/3 h-full flex items-center m-auto pb-10 lg:pb-0 lg:mx-4 lg:my-4 self-center">
           <img src="{{aliseeImg}}"
                alt="alisée"
-               class="pr-3">
+               >
         </div>
       </div>
     </div>
