--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -87,7 +87,9 @@
         <div class="w-[90%] lg:w-1/3 h-full flex items-center m-auto pb-10 lg:pb-0 lg:mx-4 lg:my-4 self-center">
           <img src="{{aliseeImg}}"
                alt="alisée"
-               >
+               loading="lazy"
+               width="100%"
+               height="100%">
         </div>
       </div>
     </div>
