--- a/src/app/shared/components/widget/widget.component.html
+++ b/src/app/shared/components/widget/widget.component.html
@@ -134,6 +134,7 @@
     width="100%"
     height="600"
     frameborder="0"
-    scrolling="no">
+    scrolling="no"
+    title="planning">
   </iframe>
 </div>
