aria label on button, img opti with eager and remove some text

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,9 +69,7 @@
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">
                 Je suis psychanalyste, formée au sein de la Fédération Freudienne de Psychanalyse
                 <a href="http://www.psychanalyse.fr/" class="underline">(FFDP)</a> pendant cinq ans. Cet apprentissage, à la fois théorique et pratique, a été
-                complété par une psychanalyse personnelle et didactique de plusieurs années. Mon activité
-                est supervisée par un psychanalyste de la FFDP, garantissant ainsi le respect du code
-                déontologique.
+                complété par une psychanalyse personnelle et didactique de plusieurs années.
               </p>
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text2}}</p>
             </div>
@@ -87,7 +85,7 @@
         <div class="w-[90%] lg:w-1/3 h-full flex items-center m-auto pb-10 lg:pb-0 lg:mx-4 lg:my-4 self-center">
           <img src="{{aliseeImg}}"
                alt="alisée"
-               loading="lazy"
+               loading="eager"
                width="100%"
                height="100%">
         </div>
