--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="flex xl:hidden items-center">
-    <button (click)="toggleMenu()" class="focus:outline-none">
+    <button (click)="toggleMenu()" class="focus:outline-none" aria-label="menu">
       <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
       </svg>
@@ -25,7 +25,7 @@
 
 <div *ngIf="menuOpen" class="z-[1000] fixed inset-0 bg-[#9CA48D] flex flex-col items-center justify-start pt-8 h-full xl:hidden">
   <div class="flex w-full justify-end pr-10">
-    <button (click)="toggleMenu()" class="focus:outline-none">
+    <button (click)="toggleMenu()" class="focus:outline-none" aria-label="menu">
       <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
       </svg>
