--- a/src/app/shared/components/widget/widget.component.scss
+++ b/src/app/shared/components/widget/widget.component.scss
@@ -1,11 +1,14 @@
-:host{
+:host {
   display: block;
   width: 100%;
+  height: 100%;
+  max-height: 850px;
 }
 
 iframe {
-  width: 100%!important;
-  height: 600px;
+  width: 100% !important;
+  max-height: 850px;
+  background-color: #9CA48D;
   border: none;
 }
 
@@ -13,9 +16,11 @@ iframe {
 .iew-base {
   width: 100% !important;
   max-width: 100% !important;
+  height: 100% !important;
 
   .iew-head {
     width: 100% !important;
+    height: 100% !important;
     display: flex;
     margin: auto;
   }
@@ -28,16 +33,18 @@ iframe {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 80%;
+  height: 100% !important;
   width: 700px !important;
   background-color: #9CA48D;
 
   @media (max-width: 768px) {
     width: 100% !important;
+    height: 100% !important;
   }
 
   div {
     width: 100%;
+    height: 100% !important;
   }
 }
 
